# neuroPictures

./: .gitignore  CMakeLists.txt
GPU_stuff/: matrix_mul.cpp  matrix_mul.cu
UI/: editor.cpp  editorr.cpp  editorr.h  interface.cpp  learner.cpp
include/cuda/: version.json
include/cuda/compute-sanitizer/: sanitizer-public.lib
include/cuda/compute-sanitizer/docs/ComputeSanitizer/: index.html
include/cuda/compute-sanitizer/docs/CopyrightAndLicenses/: index.html
include/cuda/compute-sanitizer/docs/ReleaseNotes/: index.html
include/cuda/compute-sanitizer/docs/SanitizerApi/: annotated.html  classes.html  functions.html  functions_vars.html  group__SANITIZER__BARRIER__API.html  index.html  modules.html  (+24 more)
include/cuda/driver/: device.h
include/cuda/lib/x64/: cufft.lib  cufftw.lib  cufilt.lib  cusolver.lib  nppial.lib  nppicc.lib  nppif.lib  nppim.lib  nppist.lib  npps.lib  nvJitLink.lib
include/cuda/libnvvp/configuration/: config.ini
include/cuda/res/: nvJitLink_win32.def
lib/: libsharpyuv.lib  libwebp.lib  libwebpdecoder.lib  libwebpdemux.lib  libwebpmux.lib  lzma.lib  opencv_calib3d4.lib  opencv_core4.lib  opencv_dnn4.lib  opencv_features2d4.lib  opencv_flann4.lib  opencv_highgui4.lib  opencv_imgcodecs4.lib  opencv_imgproc4.lib  opencv_ml4.lib  opencv_objdetect4.lib  opencv_photo4.lib  opencv_stitching4.lib  opencv_video4.lib  opencv_videoio4.lib  quirc.lib
nn/: img_to_rgb.cpp  network.cpp  perceptron.cpp  utility.cpp
nn/layers/: convolution.cpp  perceptron.cpp  pooling.cpp
share/dirent/: vcpkg.spdx.json  vcpkg_abi_info.txt
tests/: tests.cpp
(+228 files in other folders)
